<resources>
    <string name="app_name">Unipaivakirja_Haltimo_Backman_Perala</string>
    <string name="textView_aloitus">Unipäiväkirja</string>
    <string name="button_aloitus">Jatka</string>
    <string name="button_unigraafi">Unigraafi</string>
    <string name="button_unesi">Sinun unesi</string>
    <string name="button_asetukset">Asetukset</string>
    <string name="buttton_kerroyo">Kerro yöstäsi</string>
    <string name="button_laheta">Lähetä</string>
    <string name="textView_mitenYosiMeni">Miten Yösi meni?</string>
    <string name="textView_montaTuntiaNukuit">Kuinka monta tuntia nukuit?</string>
    <string name="textView_mitaTeitEnnen">Mitä teit ennen nukkumaan menoa?</string>
    <string name="textView_millaisiaUnia">Millaisia unia näit?</string>
    <string name="textView_sinunUnesi">Sinun unesi</string>
    <string name="textView_popup_tallenna">Tallenna asetukset painamalla nappia</string>
    <string name="button_popup_tallennus">Tallenna</string>
    <string name="textView_tiettyUni3">Unet</string>
    <string name="textView_tiettyUni4">Ennen nukkumaan menoa tehdyt asiat</string>
    <string name="textView_tiettyUni5">Nukutut tunnit:</string>
    <string name="graafi_otsikko">Viimeisen 20 yön nukutut tunnit</string>
    <string name="textView_aloitus2">OrkkuTorkku</string>
</resources>