<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KerroYostasi">

    <Button
        android:id="@+id/button_laheta"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginBottom="28dp"
        android:onClick="sendMessage"
        android:text="@string/button_laheta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_mitenYosiMeni"
        android:layout_width="183dp"
        android:layout_height="42dp"
        android:text="@string/textView_mitenYosiMeni"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_montaTuntiaNukuit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <TextView
        android:id="@+id/textView_montaTuntiaNukuit"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_montaTuntiaNukuit"
        app:layout_constraintBottom_toTopOf="@+id/editText_nukututTunnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_nukututTunnit"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView_mitaTeitEnnen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_mitaTeitEnnen"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textView_mitaTeitEnnen"
        app:layout_constraintBottom_toTopOf="@+id/editText_mitaTeitEnnen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_millaisiaUnia"
        android:layout_width="145dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:text="@string/textView_millaisiaUnia"
        app:layout_constraintBottom_toTopOf="@+id/editText_millaisiaUnia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_mitaTeitEnnen"
        android:layout_width="369dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/textView_millaisiaUnia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_millaisiaUnia"
        android:layout_width="376dp"
        android:layout_height="90dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button_laheta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_pvm"
        android:layout_width="182dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="dd.mm.yy"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView_montaTuntiaNukuit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

</androidx.constraintlayout.widget.ConstraintLayout>